--- a/cart.css
+++ b/cart.css
@@ -35,7 +35,7 @@
 	border-radius: 7px;
 	padding: 7px 10px;
 	font-weight: bold;
-	margin-bottom: 10px;
+	margin: 10px 0;
 }
 
 .delArt:hover{
@@ -58,6 +58,7 @@
 	border-radius: 7px;
 	cursor: pointer;
 	font-size: 22px;
+	font-weight: bold;
 }
 
 .block-count button:hover{
